# rcbe_engine

./: .bazelignore  .bazelproject  .bazelrc  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  basic_codestyle.md  deploy_packages.py  main.cpp
.github/workflows/: action.yml  main.yml
bazel_test/: BUILD
bazel_test/src/: bazel_test.cpp
bazel_test/test/: sample_test.cpp
camera/: BUILD
camera/include/camera/: Camera.hpp
camera/src/: Camera.cpp
camera/test/: camera_tests.cpp  euler_tests.cpp
common/: BUILD
common/src/binary/: BinaryBuffer.cpp  base_serializer.cpp
common/src/logger/: trivial_logger.cpp
common/src/utils/: boost_output_utils.hpp  file_utils.cpp  glog_output_utils.hpp  json_utils.cpp  output_utils.cpp
common/test/: binary_file_tests.cpp  common_tests.cpp  delegate_tests.cpp  logger_tests.cpp
data/config/: global.json  toolkit_gui.json  window_manager.json
data/widgets/: main_window.glade  open_file.glade
datamodel/: BUILD
datamodel/data/rendering/: default_camera_config.json  default_renderer_config.json  vulkan_camera_config.json  windows_vulkan_renderer_config.json
datamodel/data/system/: default_game_input.json  default_window_config.json  windows_window_config.json
datamodel/src/core/: Dimensions.cpp
datamodel/src/geometry/: BinaryStlFile.cpp  Mesh.cpp  geometry.cpp  triangle_indices.cpp
datamodel/src/math/: Matrix.cpp  Transform.cpp  Vector.cpp  matrix_helpers.cpp  rotation_units.cpp
datamodel/test/: angles_tests.cpp  core_tests.cpp  datamodel_tests.cpp  geometry_tests.cpp  matrix_operations.cpp  quaternion_operations.cpp  rendering_data_tests.cpp  texture_tests.cpp  transform_operations.cpp  vector_operations.cpp  visual_tests.cpp
docker/config/: image_relations_conditional.json  image_relations_linear.json
docker/docker-compose/: build.yaml  radameon.yaml  radameon_build.yaml  radameon_dev.yaml  radameon_rust.yaml  rcbe.yaml  rcbe_dev.yaml  rust.yaml
docker/dockerfiles/: base.docker  build.docker  build_base.docker  build_clang.docker  build_gcc.docker  dev.docker  entrypoint.sh  main.docker  rust_dev.docker  start_storage.sh  test.docker
docker/scripts/: docker_builder.py  entrypoint.sh  run_docker  run_docker.sh
docs/: coordinate_systems.md
engine_common/: BUILD  CMakeLists.txt
engine_common/include/common/fundamentals/: types.hpp
engine_common/include/common/fuzzy_logic/: fuzzy_compare.hpp  fuzzy_logic.hpp
engine_common/include/common/utils/: file_utils.h
engine_common/src/common/utils/: file_utils.cpp
engine_common/src/fuzzy_logic/: fuzzy_compare.cpp
engine_datamodel/: BUILD  CMakeLists.txt
engine_datamodel/data/rendering/: default_renderer_config.json
engine_datamodel/include/: data_model_config.hpp
engine_datamodel/include/data_types/: core_types.hpp  data_model_config.hpp  gui_types.h  gui_types.hpp  rendering_types.hpp
engine_datamodel/include/data_types/core/: ArrayBase.hpp  CObject.hpp  Dimensions.hpp
engine_datamodel/include/data_types/geometry/: Matrix.hpp  Mesh.hpp  Vector.hpp  geometry.hpp
engine_datamodel/include/data_types/math/: Matrix.hpp  Quaternion.hpp  Vector.hpp  math.hpp
engine_datamodel/include/data_types/rendering/: RenderingObject.hpp
engine_datamodel/include/data_types/system/: WindowConfig.hpp
engine_datamodel/include/data_types/visual/: RGBAColor.hpp
engine_datamodel/include/geometry/: geometry.hpp
engine_datamodel/src/: RenderingObject.cpp  rendering_types.cpp
engine_datamodel/src/core/: Dimensions.cpp
engine_datamodel/src/geometry/: Mesh.cpp
engine_datamodel/src/math/: Matrix.cpp  Transform.cpp  Vector.cpp
engine_datamodel/src/rendering/: RenderingObject.cpp
engine_datamodel/src/system/: WindowConfig.cpp
engine_datamodel/test/: matrix_operations.cpp  quaternion_operations.cpp  rendering_data_tests.cpp  transform_operations.cpp
engine_graphics/: BUILD  CMakeLists.txt
engine_graphics/include/core/: Renderer.hpp  constants.hpp  conversions.hpp  gl_extensions.hpp  types.hpp
engine_graphics/src/: Renderer.cpp  conversions.cpp  core_test_node.cpp  gl_extensions.cpp  renderer_test_node.cpp  types.cpp
engine_gui/: BUILD  CMakeLists.txt
engine_gui/data/widgets/: main_window.glade  main_window.glade~
engine_gui/include/config/: GlobalEngineConfig.h  WindowManagerConfig.h
engine_gui/include/gui/: Window.h  WindowManager.h  window_utils.h
engine_gui/src/: main.cpp
engine_gui/src/config/: GlobalEngineConfig.cpp  WindowManagerConfig.cpp
engine_gui/src/gui/: Window.cpp  WindowManager.cpp
exceptions/: BUILD
gl_extensions/: BUILD
gl_extensions/src/: gl_extensions.cpp
include/config/: ConfigUtils.h  GlobalEngineConfig.h  ToolkitGUIConfig.h  config.h
include/engine/: Engine.h
include/gui/: Window.h  WindowManager.h  window_utils.h
input_manager/: BUILD
input_manager/src/: AbstractInputManager.cpp  EditorInputManager.cpp  EditorInputManager.hpp  GameInputManager.cpp  InputManagerImplementation.cpp
meta_package/: BUILD  generate_engine_config_h.py  global_variables.bzl  rdmn_build_constants.bzl  rules.bzl
meta_package/config_settings_tests/: BUILD  glmain.cpp  vkmain.cpp
meta_package/engine_config_header/: engine_config.hpp.in
meta_package/public_api/: BUILD  public_api.hpp
meta_package/windows_api/: public_api.hpp
parsers/: BUILD
parsers/src/: test_x3d_parser.cpp
parsers/test/: gltf_parser_test.cpp  parsers_test.cpp  stl_parser_test.cpp  tga_parser_test.cpp  x3d_parser_test.cpp
renderer/: BUILD
renderer/src/: GLRenderer.cpp  GLRenderer.hpp  Renderer.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp
samples/check_tga/: BUILD
samples/renderer/: BUILD
src/: main.cpp
src/config/: GlobalEngineConfig.cpp  ToolkitGUIConfig.cpp
src/gui/: Window.cpp  WindowManager.cpp  window_utils.cpp
ticker/: BUILD
ticker/src/: Ticker.cpp
ticker/test/: ticker_test.cpp
traits/: BUILD
window_manager/: BUILD
window_manager/src/: MsWindow.cpp  MsWindow.hpp  RWindow.cpp  WindowManager.cpp  XWWindow.cpp  XWindow.cpp  XWindow.hpp  main.cpp  test_tool.cpp
(+166 files in other folders)
